--- a/ios/UILibrary/Info.plist
+++ b/ios/UILibrary/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AvenirNextLTPro-Bold.otf</string>
+		<string>AvenirNextLTPro-Demi.otf</string>
+		<string>AvenirNextLTPro-Regular.otf</string>
+		<string>Mulish-Bold.ttf</string>
+		<string>Mulish-Regular.otf</string>
+		<string>Mulish-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
