--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.68.2"
   },
   "dependencies": {
+    "react-native-fast-image": "^8.5.11",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0"
