--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --check ./src",
     "prepare": "bob build"
   },
   "peerDependencies": {
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "react-native-fast-image": "^8.5.11",
+    "react-native-restart": "^0.0.24",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0"
@@ -34,6 +36,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
+    "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
