--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "react-native-fast-image": "^8.5.11",
+    "react-native-mask-input": "1.2.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0"
