Added Date Component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.68.2"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.1.4",
     "react-native-fast-image": "^8.5.11",
     "react-native-mask-input": "1.2.0",
     "react-native-restart": "^0.0.24",
