--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-native": "0.68.2"
   },
   "dependencies": {
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^5.1.3",
     "react-native-fast-image": "^8.5.11",
     "react-native-mask-input": "1.2.0",
     "react-native-restart": "^0.0.24",
@@ -28,6 +32,8 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/bob": "^0.8.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "4.0.5",
+    "@testing-library/react-native": "9.1.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
@@ -39,9 +45,7 @@
     "metro-react-native-babel-preset": "^0.67.0",
     "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4",
-    "@testing-library/jest-native": "4.0.5",
-    "@testing-library/react-native": "9.1.0"
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
