--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "@callstack/react-theme-provider": "3.0.7",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^5.1.3",
     "react-native-fast-image": "^8.5.11",
