--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.68.2"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.2.0",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "lottie-ios": "^3.2.3",
