--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-tab-view": "3.1.1",
     "react-native-pager-view": "5.4.25",
     "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "1.0.0"
+    "react-native-svg-transformer": "1.0.0",
+    "react-native-mask-input": "1.2.0"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.2.0",
