--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "prepare": "bob build"
   },
   "peerDependencies": {
+    "@callstack/react-theme-provider": "3.0.7",
+    "@react-navigation/material-top-tabs": "6.2.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "@callstack/react-theme-provider": "3.0.7",
     "react-native-fast-image": "8.5.11",
-    "@react-navigation/material-top-tabs": "6.2.2",
-    "react-native-tab-view": "3.1.1",
+    "react-native-mask-input": "1.2.0",
     "react-native-pager-view": "5.4.25",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "1.0.0",
-    "react-native-mask-input": "1.2.0"
+    "react-native-tab-view": "3.1.1"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.2.0",
@@ -29,6 +29,7 @@
     "lottie-ios": "3.2.3",
     "lottie-react-native": "5.1.3",
     "react-native-mask-input": "1.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-size-matters": "0.4.0"
   },
   "devDependencies": {
